Fixed menu item spacing

--- a/CSS/welcome.css
+++ b/CSS/welcome.css
@@ -36,9 +36,9 @@ h1{
   text-align: center;
   vertical-align: middle;
 }
-
-#summary{
-  margin-left: 300px;
+.menuItems{
+  display: flex;
+  justify-content: space-around;
 }
 
 .menu:hover{
